--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^3.1.2",
+    "mobx": "^6.11.0",
+    "mobx-react-lite": "^4.0.5",
     "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
