--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "bcryptjs-react": "^2.4.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "dotenv": "^16.3.1",
